# MoE

./: .gitignore  README.md  pyproject.toml  setup.cfg
exploration/: analyze_factors.py  annotate_first_stage.py  framenet_bucket_stats.py  partition_analysis.py  partition_analysis_framenet.py  pretty_print_factors.py
src/: __init__.py  branching_tree.py  data.py  metrics.py  models.py  train.py  train_composite.py  train_composite_branching.py  train_product.py  utils.py
src/conf/: composite.yaml  default.yaml  product.yaml
src/grid/: __init__.py  explorer.py  grid.yaml  product.yaml  product_explorer.py
src/moe/: metrics.py  models.py  train.py  utils.py
src/moe.egg-info/: PKG-INFO  SOURCES.txt
src/moe_trainer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: README.md  __init__.py  build_conll_datasets.sbatch  build_dataset.py  build_framenet_datasets.sbatch  build_wikiann_datasets.sbatch  build_wikiann_subset.sbatch  pseudo_grid.py  pseudo_grid_composite.py  run_partition_analysis.sbatch  run_partition_analysis_framenet.sbatch
tools/datasets/: README.md  build_dataset.py  download_dataset.py
tools/precache/: README.md  __main__.py
tools/prechache/: README.md  download_datasets.py  download_wikiann.sbatch
tools/runners/: README.md  _pseudo_grid_base.py  eval_grid_branching.py  pseudo_grid.py  pseudo_grid_branching.py  pseudo_grid_composite.py
tools/slurm/: README.md  common.sh
tools/slurm/analysis/: run_framenet_bucket_stats.sbatch  run_partition_analysis.sbatch  run_partition_analysis_framenet.sbatch
(+7 files in other folders)
