[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe"
version = "0.1.0"
description = "Mixture-of-experts training code"
authors = [
    { name = "MoE Authors" }
]
dependencies = [
    "dora-search",
    "hydra-core",
    "transformers",
    "sentence-transformers",
    "datasets",
    "spacy",
    "tabulate",
    "pandas",
    "pyyaml",
    "tqdm",
    "prettytable"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
