[metadata]
name = moe
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
install_requires =
    dora-search
    hydra-core
    transformers
    sentence-transformers
    datasets
    spacy
    tabulate
    pandas
    pyyaml
    tqdm
    prettytable
python_requires = >=3.10

[options.packages.find]
where = src
